[gd_scene load_steps=2 format=3 uid="uid://dd5ng7kfnr7ip"]

[ext_resource type="Script" uid="uid://t306yne6t6up" path="res://scripts/LoginScreen.gd" id="1"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Vampire Raiders"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Username:"

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter username"

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Password:"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter password"
secret = true

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Register New Account"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RegisterButton" to="." method="_on_register_button_pressed"]
